# Circle-Madness

./: '  .gitignore  .gitmodules  CMakeLists.txt  run.sh
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
resources/shaders/: frag.glsl  text_frag.glsl  vert.glsl
src/: bullet.h  camera.cpp  camera.h  component.cpp  component.h  enemy.cpp  enemy.h  game.cpp  game.h  input.cpp  input.h  main.cpp  math.cpp  math.h  node.cpp  node.h  plane.cpp  plane.h  player.cpp  player.h  scene.h  score.cpp  score.h  shader.cpp  shader.h  sprite.cpp  sprite.h  time.cpp  time.h  window.cpp  window.h
src/components/: font_renderer.cpp  font_renderer.h  sprite_renderer.cpp  sprite_renderer.h
